completed and tested implementations for the service layer (ItemService and RoomService)